; ModuleID = '/home/carl/AnghaBench/fastdfs/client/extr_storage_client.c_storage_modify_by_callback.c'
source_filename = "/home/carl/AnghaBench/fastdfs/client/extr_storage_client.c_storage_modify_by_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@FDFS_UPLOAD_BY_CALLBACK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @storage_modify_by_callback(i32* %0, i32* %1, i64 %2, i8* %3, i32 %4, i32 %5, i8* %6, i8* %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i8*, align 8
  %17 = alloca i8*, align 8
  store i32* %0, i32** %10, align 8
  store i32* %1, i32** %11, align 8
  store i64 %2, i64* %12, align 8
  store i8* %3, i8** %13, align 8
  store i32 %4, i32* %14, align 4
  store i32 %5, i32* %15, align 4
  store i8* %6, i8** %16, align 8
  store i8* %7, i8** %17, align 8
  %18 = load i8*, i8** %17, align 8
  %19 = icmp eq i8* %18, null
  br i1 %19, label %33, label %20

20:                                               ; preds = %8
  %21 = load i8*, i8** %17, align 8
  %22 = load i8, i8* %21, align 1
  %23 = sext i8 %22 to i32
  %24 = icmp eq i32 %23, 0
  br i1 %24, label %33, label %25

25:                                               ; preds = %20
  %26 = load i8*, i8** %16, align 8
  %27 = icmp eq i8* %26, null
  br i1 %27, label %33, label %28

28:                                               ; preds = %25
  %29 = load i8*, i8** %16, align 8
  %30 = load i8, i8* %29, align 1
  %31 = sext i8 %30 to i32
  %32 = icmp eq i32 %31, 0
  br i1 %32, label %33, label %35

33:                                               ; preds = %28, %25, %20, %8
  %34 = load i32, i32* @EINVAL, align 4
  store i32 %34, i32* %9, align 4
  br label %47

35:                                               ; preds = %28
  %36 = load i32*, i32** %10, align 8
  %37 = load i32*, i32** %11, align 8
  %38 = load i32, i32* @FDFS_UPLOAD_BY_CALLBACK, align 4
  %39 = load i64, i64* %12, align 8
  %40 = inttoptr i64 %39 to i8*
  %41 = load i8*, i8** %13, align 8
  %42 = load i32, i32* %14, align 4
  %43 = load i32, i32* %15, align 4
  %44 = load i8*, i8** %16, align 8
  %45 = load i8*, i8** %17, align 8
  %46 = call i32 @storage_do_modify_file(i32* %36, i32* %37, i32 %38, i8* %40, i8* %41, i32 %42, i32 %43, i8* %44, i8* %45)
  store i32 %46, i32* %9, align 4
  br label %47

47:                                               ; preds = %35, %33
  %48 = load i32, i32* %9, align 4
  ret i32 %48
}

declare dso_local i32 @storage_do_modify_file(i32*, i32*, i32, i8*, i8*, i32, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
